Final version for submission
